third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_field_field.exp

Diagnostics:
error: cannot mutably borrow local `inner` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_field_field.move:50:18
   │
49 │         let c = &mut inner.f1;
   │                 ------------- previous mutable field borrow
50 │         let f1 = &mut inner.f1; // error in v2
   │                  ^^^^^^^^^^^^^ mutable borrow attempted here

error: cannot mutably borrow local `inner` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_field_field.move:57:18
   │
56 │         let c = id_mut(&mut inner.f1);
   │                        ------------- previous mutable field borrow
57 │         let f1 = &mut inner.f1; // error in v2
   │                  ^^^^^^^^^^^^^ mutable borrow attempted here
